圈子vp结构完成，细化子fragment布局

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,135 +44,260 @@
 
     <!--侧边栏内容-->
     <RelativeLayout
-        android:layout_width="250dp"
+        android:layout_width="320dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="#FFFFFF">
-        <View
-            android:id="@+id/main_users"
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:background="#000000"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:adjustViewBounds="true"
-            android:layout_marginBottom="100dp"
-            android:alpha="0.5"
-            android:src="@mipmap/img1"/>
-        <com.example.learningmachineparentsapp.View.RoundImageView
-            android:id="@+id/main_riv_usericon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="60dp"
-            android:src="@mipmap/added"
-            android:layout_marginLeft="30dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="云淡风轻"
-            android:textColor="#FFFFFF"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            android:layout_below="@+id/main_riv_usericon"
-            android:layout_alignBaseline="@+id/main_riv_usericon"/>
-
+        android:background="#E4E4E4">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@+id/main_users">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
+            android:layout_width="320dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:layout_width="230dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:background="#FFFFFF">
+                <com.example.learningmachineparentsapp.View.RoundImageView
+                    android:id="@+id/main_riv_usericon"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:src="@mipmap/added"/>
                 <TextView
+                    android:id="@+id/main_tv_username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp"
-                    android:textColor="#35A99E"
-                    android:text="我的个人主页"/>
-            </LinearLayout>
+                    android:gravity="center_horizontal"
+                    android:text="云淡风轻"
+                    android:textColor="#000000"
+                    android:textSize="18dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_toLeftOf="@id/main_iv_qrcode"
+                    android:layout_below="@id/main_riv_usericon"/>
+                <ImageView
+                    android:id="@+id/main_iv_qrcode"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/main_tv_username"
+                    android:layout_marginRight="30dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_below="@id/main_tv_username">
+                    <LinearLayout
+                        android:id="@+id/main_ll_publish"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/main_iv_publish"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_margin="15dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="我的发布"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/main_ll_purse"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/main_iv_purse"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_margin="15dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="钱包"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/main_ll_help"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/main_iv_help"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_margin="15dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="帮助与反馈" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/main_ll_account"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/main_iv_account"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_margin="15dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="账号与安全"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/main_ll_cache"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/main_iv_cache"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_margin="15dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="清除缓存"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/main_ll_private"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/main_iv_private"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_margin="15dp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="16sp"
+                            android:textColor="#404040"
+                            android:text="隐私设置"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="20dp">
+                    <ImageView
+                        android:id="@+id/main_iv_setting"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="50dp"/>
+                    <ImageView
+                        android:id="@+id/main_iv_off"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="50dp"/>
+                </RelativeLayout>
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
-                <TextView
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_gravity="start">
+                <!--<androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/main_rv_child"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp"
-                    android:textColor="#35A99E"
-                    android:text="收藏"/>
-            </LinearLayout>
+                    android:layout_height="match_parent"/>-->
+                <RelativeLayout
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp">
+                    <View
+                        android:layout_width="3dp"
+                        android:layout_height="match_parent"
+                        android:background="#49DA9C"/>
+                    <ImageView
+                        android:id="@+id/main_iv_child"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_centerHorizontal="true"
+                        android:foreground="@mipmap/award"
+                        android:background="@drawable/border_goods_bg"
+                        android:adjustViewBounds="true"/>
+                    <TextView
+                        android:id="@+id/main_iv_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center_horizontal"
+                        android:layout_below="@id/main_iv_child"
+                        android:text="李小华"
+                        android:textColor="#404040"/>
+                </RelativeLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp"
-                    android:textColor="#35A99E"
-                    android:text="帮助与客服" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp"
-                    android:textColor="#35A99E"
-                    android:text="设备管理"/>
+                <RelativeLayout
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp">
+                    <ImageView
+                        android:id="@+id/main_iv_adddevice"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_centerHorizontal="true"
+                        android:foreground="@mipmap/add"
+                        android:background="@drawable/border_goods_bg"
+                        android:adjustViewBounds="true"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center_horizontal"
+                        android:layout_below="@id/main_iv_adddevice"
+                        android:text="添加学习机"
+                        android:textColor="#404040"/>
+                </RelativeLayout>
+
             </LinearLayout>
         </LinearLayout>
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp">
-            <ImageView
-                android:id="@+id/main_iv_setting"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="50dp"/>
-            <ImageView
-                android:id="@+id/main_iv_off"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="50dp"/>
-        </RelativeLayout>
     </RelativeLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
