--- a/app/src/main/res/drawable/border_goods_bg.xml
+++ b/app/src/main/res/drawable/border_goods_bg.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="#80FFFFFF"/>
     <corners android:radius="10dp"/>
     <stroke android:width="1dip"
         android:color="#C3C3C3"/>
