--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -7,6 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".Circle.Video.VideoActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/videoplay_rv_upload"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:layout_gravity="center_horizontal"
+            android:text="上传视频"/>
+    </LinearLayout>
+
     <!--视频-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videoplay_rv_video"
