--- a/app/src/main/res/layout/fragment_circle_video.xml
+++ b/app/src/main/res/layout/fragment_circle_video.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/circle_video_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="视频"/>
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
