--- a/app/src/main/res/layout/activity_module.xml
+++ b/app/src/main/res/layout/activity_module.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Homepage.Module.ModuleActivity">
+    tools:context=".Homepage.Module.ModuleActivity"
+    android:background="@drawable/gradient_background">
 
     <com.example.learningmachineparentsapp.View.TitleLayout
         android:id="@+id/module_tit"
@@ -15,8 +16,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/module_tit"
-        android:background="@drawable/gradient_background">
+        android:layout_below="@+id/module_tit">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
