--- a/app/src/main/res/layout/fragment_circle_video.xml
+++ b/app/src/main/res/layout/fragment_circle_video.xml
@@ -8,7 +8,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/circle_video_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"/>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
