--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -15,27 +15,55 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="25dp">
+        android:layout_height="46dp"
+        android:layout_marginTop="-56dp">
+        <Button
+            android:id="@+id/password_btn"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:text="完成"
+            android:layout_marginRight="15dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/upload_btn_background"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp">
         <TextView
-            android:id="@+id/password_"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/password_tv_psw"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:text="密码"
-            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
             android:textSize="16sp"/>
         <EditText
+            android:id="@+id/password_et_psw"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@null"
+            android:textSize="16sp"
+            android:inputType="textPassword"
+            android:hint="请输入当前密码"
+            android:layout_toLeftOf="@id/password_tv_forget"
+            android:layout_toRightOf="@id/password_tv_psw"
             android:layout_marginRight="10dp"/>
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:src="@mipmap/next"/>
+        <TextView
+            android:id="@+id/password_tv_forget"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="忘记密码"
+            android:textSize="16sp"
+            android:textColor="#49DA9C"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
     <View
@@ -43,4 +71,78 @@
         android:layout_height="1dp"
         android:layout_margin="10dp"
         android:background="#D7D7D7"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+        <TextView
+            android:id="@+id/password_tv_newpsw"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:text="新密码"
+            android:gravity="center_vertical"
+            android:textSize="16sp"/>
+        <EditText
+            android:id="@+id/password_et_newpsw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:textSize="16sp"
+            android:inputType="textPassword"
+            android:hint="请输入新密码"
+            android:layout_toRightOf="@id/password_tv_newpsw"
+            android:layout_marginRight="10dp"/>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="10dp"
+        android:background="#D7D7D7"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+        <TextView
+            android:id="@+id/password_tv_renewpsw"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:text="再次密码"
+            android:gravity="center_vertical"
+            android:textSize="16sp"/>
+        <EditText
+            android:id="@+id/password_et_renewpsw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:textSize="16sp"
+            android:inputType="textPassword"
+            android:hint="请再次输入新密码"
+            android:layout_toRightOf="@id/password_tv_renewpsw"
+            android:layout_marginRight="10dp"/>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="13sp"
+        android:textColor="#49DA9C"
+        android:text="密码必须是8-16位的数字、字符组合（不能是纯数字或纯字母）"/>
+
+    <TextView
+        android:id="@+id/password_tv_alter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:visibility="invisible"
+        android:textSize="13sp"
+        android:textColor="#DA4949"/>
 </LinearLayout>
