--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -17,8 +17,7 @@
     <RelativeLayout
         android:id="@+id/account_rl_phone"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_marginTop="30dp">
+        android:layout_height="25dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
